--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,28 @@ body{
 /* GO TOP */
 
 
+/* skew */
+.skew-abajo{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-width: 0 0 10vh 100vw;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+}
+.skew-arriba{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-width: 10vh 100vw 0 0;
+    border-style: solid;
+    border-color: white transparent transparent transparent;
+    z-index: 10;
+}
+/* skew */
+
+
+
 /* Menu de navegacion */
 #header{
     position: relative;
@@ -88,7 +110,6 @@ body{
     font-weight: 400;
     color: var(--black);
 }
-
 .menu .list-container{
     margin-right: 20px;
 }
@@ -135,7 +156,7 @@ body{
 .img-header{
     position: relative;
     width: 100%;
-    height: 100vw;
+    height: 80vh;
     background: url(../img/header.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -195,6 +216,7 @@ body{
     background: var(--purple);
     color: #fff;
 }
+
 /* IMG header */
 
 /* Acerca de nosotros */
@@ -626,5 +648,49 @@ body{
     .menu .list-container .lists li a:hover{
         background: none;
         color: var(--blue);
+    }
+}
+@media only screen and (max-width:900px){
+    .img-header .welcome h1{
+        font-size: 40px;
+    }
+    .img-header .welcome > button {
+        width: 130px;
+        font-size: 20px;
+    }
+
+    .acerca-de .info-container .about-gallery{
+        flex-direction: column;
+    }
+    .acerca-de .info-container .about-gallery img{
+        width: 100%;
+    }
+    .our-projects .container-project .project-img img{
+        width: 80%;
+        margin-bottom: 30px;
+    }
+}
+
+@media only screen and (max-width:590px) {
+    .img-header .welcome h1{
+        font-size: 30px;
+    }
+    .img-header .welcome hr{
+        width: 100%;
+    }
+    .img-header .welcome > button {
+        width: 130px;
+        font-size: 20px;
+    }
+
+    .acerca-de .info-container .about-gallery{
+        flex-direction: column;
+    }
+    .acerca-de .info-container .about-gallery img{
+        width: 100%;
+    }
+    .our-projects .container-project .project-img img{
+        width: 80%;
+        margin-bottom: 30px;
     }
 }
